add inital autotools build

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 sandbox
+Makefile
+*/Makefile.in
+Makefile.in
+/aclocal.m4
+/autom4te.cache/
+/config.h
+/configure
+/m4/
+/stamp-h?
+.deps/
+.dirstamp
+depcomp
+missing
+install-sh
+*.o
+*~
+compile
+config.log
+config.status
+src/Makefile
+src/manini
+src/minIni/dev/libminini.a
